<resources>
    <string name="app_name">Assignment12</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="label_btn_login">Login</string>
    <string name="label_or_connect_with">Or Connect With</string>
    <string name="label_btn_login_facebook">Facebook</string>
    <string name="label_btn_login_google">Google</string>
    <string name="label_semicolon">:</string>
    <string name="label_email">Email</string>
    <string name="label_phone">Phone</string>
    <string name="label_btn_logout">Log Out</string>
    <string name="facebook_app_id">591387794735899</string>
    <string name="fb_login_protocol_scheme">fb591387794735899</string>


</resources>
