<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/bg_main"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            app:srcCompat="@drawable/ic_heart"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="@dimen/textSizeBody"
                android:hint="@string/label_username"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_password"
                android:textSize="@dimen/textSizeBody"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="@dimen/textSizeBodySmall"
            android:textColor="@color/textColorMain"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/label_forgot_password"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/label_btn_login"
            android:background="@drawable/bg_btn_login"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/textColorMain"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSizeBodySmall"
                android:textColor="@color/textColorMain"
                android:textStyle="normal"
                android:text="@string/label_or_connect_with"/>
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/textColorMain"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login_facebook"
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.Button.Icon"
                app:icon="@drawable/ic_facebook_logo"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/label_btn_login_facebook"
                android:background="@drawable/bg_btn_facebook"
                android:textSize="@dimen/textSizeBody"
                android:textColor="@color/textColorPrimary"
                app:iconGravity="start"
                android:layout_height="wrap_content"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login_google"
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.Button.Icon"
                app:icon="@drawable/ic_google_plus_logo"
                android:text="@string/label_btn_login_google"
                android:background="@drawable/bg_btn_google"
                android:textSize="@dimen/textSizeBody"
                app:iconGravity="start"
                android:textColor="@color/textColorPrimary"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>