<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/bg_main"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            app:srcCompat="@drawable/ic_heart"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
          <androidx.appcompat.widget.AppCompatTextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:gravity="start"
              android:textSize="@dimen/textSizeBody"
              android:textColor="@color/textColorMain"
              android:textStyle="normal"
              android:layout_marginBottom="@dimen/activity_horizontal_margin"
              android:text="@string/label_username"/>
          <androidx.appcompat.widget.AppCompatTextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="@dimen/textSizeBody"
              android:textColor="@color/textColorMain"
              android:layout_marginEnd="@dimen/activity_horizontal_margin"
              android:textStyle="normal"
              android:layout_marginBottom="@dimen/activity_horizontal_margin"
              android:text="@string/label_semicolon"/>
          <androidx.appcompat.widget.AppCompatTextView
              android:id="@+id/tvUsername"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1.3"
              android:gravity="start"
              android:textSize="@dimen/textSizeBody"
              android:textColor="@color/textColorMain"
              android:textStyle="normal"
              android:layout_marginBottom="@dimen/activity_horizontal_margin"
              tools:text="@string/label_username"/>
      </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:textSize="@dimen/textSizeBody"
                android:textColor="@color/textColorMain"
                android:textStyle="normal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:text="@string/label_email"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSizeBody"
                android:textColor="@color/textColorMain"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:textStyle="normal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:text="@string/label_semicolon"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:gravity="start"
                android:textSize="@dimen/textSizeBody"
                android:textColor="@color/textColorMain"
                android:textStyle="normal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                tools:text="@string/label_email"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:textSize="@dimen/textSizeBody"
                android:textColor="@color/textColorMain"
                android:textStyle="normal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:text="@string/label_phone"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSizeBody"
                android:textColor="@color/textColorMain"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:textStyle="normal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:text="@string/label_semicolon"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:gravity="start"
                android:textSize="@dimen/textSizeBody"
                android:textColor="@color/textColorMain"
                android:textStyle="normal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                tools:text="@string/label_phone"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogOut"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/label_btn_logout"
            android:background="@drawable/bg_btn_login"/>
    </LinearLayout>
</FrameLayout>